# zebra

framework/: Setup.hs
zebra-cli/: ambiata-zebra-cli.cabal  ambiata-zebra-cli.lock-8.0.2  ambiata-zebra-cli.lock-8.4.4  master.toml
zebra-cli/main/: zebra.hs
zebra-cli/src/Zebra/Command/: Merge.hs
zebra-core/: ambiata-zebra-core.cabal  ambiata-zebra-core.lock-8.0.2  ambiata-zebra-core.lock-8.4.4  master.toml
zebra-core/src/Zebra/Merge/: Table.hs
zebra-core/src/Zebra/Merge/Puller/: List.hs
zebra-core/src/Zebra/Table/: Logical.hs  Schema.hs  Striped.hs
zebra-core/test/Test/Zebra/: QuickCheck.hs
zebra-core/test/Test/Zebra/Merge/: Table.hs
