name:                  ambiata-zebra-cli
version:               0.0.2
license:               BSD3
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              zebra
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           zebra

library
  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-anemone
                    , ambiata-p
                    , ambiata-viking
                    , ambiata-x-eithert
                    , ambiata-x-vector
                    , ambiata-zebra-core
                    , binary                          >= 0.7.2      && < 0.9
                    , bytestring                      == 0.10.*
                    , containers                      >= 0.5        && < 0.7
                    , concurrent-output               >= 1.6        && < 1.11
                    , exceptions                      >= 0.8        && < 0.11
                    , mmorph                          == 1.0.*
                    , pretty-show                     == 1.6.*
                    , resourcet                       
                    , semigroups                      == 0.18.*
                    , text                            == 1.2.*
                    , transformers                    == 0.5.*
                    , vector                          >= 0.11       && < 0.13

  ghc-options:
                    -Wall -feager-blackholing

  hs-source-dirs:
                    src

  exposed-modules:
                    Zebra.Command
                    Zebra.Command.Adapt
                    Zebra.Command.Consistency
                    Zebra.Command.Export
                    Zebra.Command.Import
                    Zebra.Command.Merge
                    Zebra.Command.Summary
                    Zebra.Command.Util

  ghc-prof-options:
                    -fno-prof-count-entries -fprof-auto-top

executable zebra
  if impl(ghc >= 8.0)
    ghc-options:
                    -Wall -threaded -O2 -rtsopts "-with-rtsopts=-A128m -n4m" -feager-blackholing
  else
    ghc-options:
                    -Wall -threaded -O2 -rtsopts "-with-rtsopts=-A128m -n4m -qg"

  -- https://downloads.haskell.org/ghc/8.0.2/docs/html/users_guide/profiling.html#profiling-parallel-and-concurrent-programs
  -- We strongly recommend that you use -fno-prof-count-entries when compiling a program to be profiled on multiple cores, 
  -- because the entry counts are also stored in shared memory, and continuously updating them on multiple cores is extremely slow.
  ghc-prof-options:
                    -fno-prof-count-entries -fprof-auto-top

  hs-source-dirs:
                    gen

  other-modules:
                    BuildInfo_ambiata_zebra_cli
                    DependencyInfo_ambiata_zebra_cli

  autogen-modules:
                    BuildInfo_ambiata_zebra_cli
                    DependencyInfo_ambiata_zebra_cli

  main-is:
                    ../main/zebra.hs

  build-depends:
                      base
                    , ambiata-anemone
                    , ambiata-p
                    , ambiata-x-eithert
                    , ambiata-x-optparse
                    , ambiata-x-vector
                    , ambiata-zebra-cli
                    , ambiata-zebra-core
                    , binary
                    , bytestring
                    , containers
                    , mmorph
                    , optparse-applicative
                    , pretty-show
                    , resourcet
                    , semigroups
                    , text
                    , transformers

test-suite test
  type:
                    exitcode-stdio-1.0

  main-is:
                    test.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-disorder-jack
                    , ambiata-p

test-suite test-io
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-io.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-disorder-jack
                    , ambiata-p

test-suite test-cli
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-cli.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base
                    , ambiata-disorder-core
